Fix logo on mobile

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -1,7 +1,6 @@
 .navbar-container {
   .logo {
     display: block;
-    width: 30%;
     svg {
       &:hover {
         fill: #d8a894;
